syntax = "proto3";

option csharp_namespace = "Saas.Entity.Common";

package Common;

message MsgInt{
	int32 Value = 1;
}
message MsgBool{
	bool Value = 1;
}
message MsgString{
	string Value = 1; 
}
message MsgEmpty{}